--- a/neurips23/ood/fuse/config.yaml
+++ b/neurips23/ood/fuse/config.yaml
@@ -1,5 +1,5 @@
 random-xs:
-  pyanns:
+  fuse:
     docker-tag: neurips23-ood-fuse
     module: neurips23.ood.fuse.fuse
     constructor: Fuse
@@ -11,7 +11,7 @@ random-xs:
         query-args: |
           [{"ef":30}, {"ef":50}, {"ef":100}]
 text2image-10M:
-  pyanns:
+  fuse:
     docker-tag: neurips23-ood-fuse
     module: neurips23.ood.fuse.fuse
     constructor: Fuse
@@ -19,7 +19,7 @@ text2image-10M:
     run-groups:
       base:
         args: |
-          [{"R":48, "L":500, "buildthreads" : 16}]
+          [{"M_pjbp":35, "L_pjpq":800, "NoT": 5, "NoP": 3, "T": 8, "EoP": 1}]
         query-args: |
           [
           {"ef":90},
